--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main>
-      <section>
+      <section class="city" id="rome">
         <div class="layover">
 
         </div>
@@ -17,6 +17,7 @@
             ROME
           </div>
         </div>
+      </section>  
     </main>
   </body>
 </html>
