two section added

--- a/index.html
+++ b/index.html
@@ -9,15 +9,42 @@
   <body>
     <main>
       <section class="city" id="rome">
+        <!-- ROME -->
         <div class="layover">
 
+          <span class="background">
+            <div class="city-name">
+              ROME
+            </div>
+          </span>
         </div>
-        <div class="background">
-          <div class="city-name">
-            ROME
+      </section>
+
+      <section class="city" id="london">
+        <!-- LONDON -->
+        <div class="layover">
+
+          <div class="background">
+            <div class="city-name">
+              LONDON
+            </div>
           </div>
         </div>
-      </section>  
+      </section>
+
+      <section class="city" id="tokyo">
+        <!-- TOKYO -->
+        <div class="layover">
+
+          <div class="background">
+            <div class="city-name">
+              TOKYO
+            </div>
+          </div>
+        </div>
+      </section>
+
+
     </main>
   </body>
 </html>
